# openai-chat

./: main.py  pyproject.toml
docs/: news.md
